--- a/priv/static/custom.css
+++ b/priv/static/custom.css
@@ -70,6 +70,10 @@ a {
     height: auto;
     /* margin: 7px 5px 7px 5px;
     border: 1px solid white; */
+    color: #318CE7;
+}
+
+.schedule-cell-content.empty {
     color: white;
 }
 
@@ -151,6 +155,32 @@ a {
 
 .menu-section .menu-item:hover {
     color: #318ce7;
+}
+.menu-dropdown-list {
+    position: absolute;
+    margin: 15px;
+    z-index: 3;
+    border: 1px solid black;
+    right: 0;
+    top: 40px;
+    background-color: white;
+}
+
+.menu-dropdown-list.hidden {
+    display: none;
+}
+
+.menu-dropdown-list-item {
+    padding: 13px 15px;
+    cursor: pointer;
+}
+.menu-dropdown-list-item:hover {
+   background-color: aliceblue;
+}
+
+.sign-up-section {
+    text-align: center;
+    cursor: pointer;
 }
 
 /* INFOS */
