--- a/priv/static/custom.css
+++ b/priv/static/custom.css
@@ -23,7 +23,6 @@ body {
     margin: 0;
     height: 100%;
     font-family: Isidora-Medium, IsidoraSans-Medium, sans-serif;
-    /* font-family: Arial, Helvetica, sans-serif; */
 }
 
 /* /!\ Problème avec les accents pour Isidora-Bold */
@@ -136,8 +135,9 @@ a {
 .schedule-cell-content {
     width: 100%;
     height: auto;
-    /* margin: 7px 5px 7px 5px;
-    border: 1px solid white; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
     color: #318CE7;
 }
 
@@ -180,7 +180,6 @@ a {
     align-items: center;
     font-weight: bold;
     width: 100px;
-    /* flex-basis: 50%; */
 }
 
 .agenda-content-wrapper {
@@ -203,14 +202,12 @@ a {
 }
 
 .navbar-wrapper {
+    background: #26619C;
+    background: linear-gradient(90deg, #318CE7 0%, #26619C 100%);
     padding: 15px 10px;
-    /* border-bottom: 1px solid;
-    border-color: #318ce7; */
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background: #26619C;
-    /* background: linear-gradient(90deg, #318CE7 0%, #26619C 100%); */
 }
 .navbar-wrapper .menu-section {
     display: flex;
@@ -224,17 +221,16 @@ a {
 
 .navbar-wrapper .menu-section.no-login {
     display: flex;
-    justify-content: space-between;
-    flex-grow: 1;
-    font-size: 18px;
-    font-weight: bold;
-    color: white;
-    margin-top: 6px;
+    justify-content: flex-end;
 }
 
-.menu-item.login {
+.menu-item.signup { 
     margin-right: 15px;
-
+    background-color: white;
+    color: black;
+    border-radius: 20px;
+    padding: 12px 24px;
+    font-size: 16px;
 }
 
 .menu-section .menu-item:hover {
@@ -276,26 +272,15 @@ a {
     font-weight: bolder;
     justify-content: center;
     display: flex;
-    font-size: 26px;
+    font-size: 32px;
     margin-bottom: 20px;
     font-family: Isidora-Bold;
-}
-
-.landing-subtitle-small {
-    display: flex;
-    justify-content: center;
-    font-size: 24px;
-    margin-top: 40px;
 }
 
 .signup-section {
     display: flex;
     justify-content: center;
     margin-bottom: 40px;
-}
-
-.landing-primary-signup {
-    margin-bottom: 80px;
 }
 
 .landing-signup-button {
@@ -307,17 +292,25 @@ a {
     border: none;
     cursor: pointer;
     background-color: white;
-    /* background: #26619C;
-    background: linear-gradient(90deg, #318CE7 0%, #26619C 100%); */
 }
 
 .landing-first-page-wrapper {
     background: #26619C;
-    background: linear-gradient(
-        180deg, #26619C 64%, #318CE7 77%, white 92%);
+    background: linear-gradient(90deg, #318CE7 0%, #26619C 100%),
+    linear-gradient(180deg, #26619C, #318CE7 90%);
     color: white;
-    padding-bottom: 80px;
-    height: 140vh;
+    height: 95vh;
+}
+
+.landing-gradiant-wrapper {
+    height: 100vh;
+    background: #26619C;
+    font-weight: bold;
+    font-size: 32px;
+    background: linear-gradient(90deg, #318CE7 0%, white 100%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .landing-wrapper.logo-wrapper {
