--- a/priv/static/custom.css
+++ b/priv/static/custom.css
@@ -277,8 +277,8 @@ a {
     justify-content: center;
     text-align: center;
     display: flex;
-    margin-top: 15px;
-    font-size: 1.3rem;
+    margin-top: 30px;
+    font-size: 3.5vw;
     font-family: Isidora-Bold;
 }
 
@@ -319,17 +319,18 @@ a {
     background: #26619C;
     background:  linear-gradient(90deg, #318CE7 0%, #26619C 100%);
     color: white;
-    height: 95vh;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
 }
 
 .landing-gradiant-wrapper {
     height: 80vh;
     background: #26619C;
     font-weight: bold;
-    font-size: 3.6em;
+    font-size: 10.6vw;
     text-align: center;
     justify-content: center;
     background: linear-gradient(180deg, #318CE7 20%, white 100%);
@@ -368,18 +369,18 @@ a {
 
 .landing-intermediary-connection-button {
     background-color: white;
-    border: 1px solid lightgrey;
     padding: 10px 18px;
     color: black;
     border-radius: 18px;
     cursor: pointer;
-
+    margin-right: 20px;
+    box-shadow: 0px 0px 1px 1px grey;
 }
 
 .landing-inscription-card {
     background: linear-gradient(90deg, #318CE7 0%, #26619C 100%);
-    width: 45%;
-    min-height: 40vh;
+    width: 50%;
+    min-height: 30vh;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -461,6 +462,7 @@ a {
     justify-content: space-between;
     align-items: center;
     margin-top: 10vh;
+    flex-wrap: wrap;
 }
 
 .landing-intermediary-gradiant-wrapper {
@@ -476,14 +478,13 @@ a {
 .landing-logo-section {
     display: flex;
     justify-content: center;
-    width: 55%;
+    width: 50%;
     margin-left: auto;
     margin-right: auto;
 }
 
 
 .landing-first-page-wrapper .landing-logo-section {
-    padding-top: 28%;
 }
 
 .landing-section {
@@ -599,17 +600,16 @@ a {
 }
 
 .cl-button {
-    margin-top: 10px;
-    color: white;
-    background-color: #26619C;
-    border: none;
-    padding: 10px 15px;
-    font-weight: bold;
-    border-radius: 12px;
+    border-radius: 50px;
     outline: none;
+    text-align: center;
     cursor: pointer;
+    box-shadow: 0px 0px 1px 1px grey;
 }
 
+.cl-button:hover {
+    -webkit-box-shadow: 0px 0px 4px 1px grey;
+}
 
 /* LOGO */
 .navbar-logo-section {
@@ -653,6 +653,15 @@ a {
     font-size: 20px;
 }
 
+.footer-link:hover {
+    background: white;
+    padding: 12px 18px;
+    cursor: pointer;
+    border-radius: 30px;
+    color: #318ce7;
+
+}
+
 .contact-mail {
     font-weight: bold;
     margin-left: 10px;
@@ -669,6 +678,7 @@ a {
 .footer-white-logo {
     display: flex;
     align-items: baseline;
+    flex-wrap: wrap;
 }
 
 .footer-white-logo-image {
@@ -701,6 +711,8 @@ a {
     margin-top: 20px;
     margin-right: 20px;
     align-self: end;
+    position: absolute;
+    top: 0;
 }
 
 /* RESPONSIVE -- TABLET & SMARTPHONE */
@@ -733,4 +745,13 @@ a {
     .landing-inscription-card {
         padding: 2em;
     }
+}
+
+/* CUSTOM BREAK POINTS */
+
+@media only screen and (max-width : 410px){
+
+    .landing-intermediary-connection-header {
+        justify-content: center;
+    }   
 }
